# serializer version: 1
# name: test_sensor[sensor.minecraft_server_edition-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor[sensor.minecraft_server_edition-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_game_mode-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Game mode',
      'icon': 'mdi:cog',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_game_mode',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Game Mode',
  })
# ---
# name: test_sensor[sensor.minecraft_server_game_mode-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_latency-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Latency',
      'icon': 'mdi:signal',
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_latency',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor[sensor.minecraft_server_latency-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Latency',
      'icon': 'mdi:signal',
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_latency',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor[sensor.minecraft_server_map_name-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Map name',
      'icon': 'mdi:map',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_map_name',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Map Name',
  })
# ---
# name: test_sensor[sensor.minecraft_server_map_name-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_motd-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor[sensor.minecraft_server_motd-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_players_max-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor[sensor.minecraft_server_players_max-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_players_online-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Players online',
      'icon': 'mdi:account-multiple',
      'unit_of_measurement': 'players',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_players_online',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensor[sensor.minecraft_server_players_online-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Players online',
      'icon': 'mdi:account-multiple',
      'players_list': list([
        'Player 1',
        'Player 2',
        'Player 3',
      ]),
      'unit_of_measurement': 'players',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_players_online',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensor[sensor.minecraft_server_protocol_version-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor[sensor.minecraft_server_protocol_version-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor[sensor.minecraft_server_version-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Version',
      'icon': 'mdi:numeric',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_version',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Version',
  })
# ---
# name: test_sensor[sensor.minecraft_server_version-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Version',
      'icon': 'mdi:numeric',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_version',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Version',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_edition-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_edition-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_game_mode-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Game mode',
      'icon': 'mdi:cog',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_game_mode',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Game Mode',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_game_mode-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_latency-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Latency',
      'icon': 'mdi:signal',
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_latency',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_latency-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Latency',
      'icon': 'mdi:signal',
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_latency',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_map_name-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Map name',
      'icon': 'mdi:map',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_map_name',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Map Name',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_map_name-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_motd-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_motd-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_players_max-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_players_max-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_players_online-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Players online',
      'icon': 'mdi:account-multiple',
      'unit_of_measurement': 'players',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_players_online',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_players_online-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Players online',
      'icon': 'mdi:account-multiple',
      'players_list': list([
        'Player 1',
        'Player 2',
        'Player 3',
      ]),
      'unit_of_measurement': 'players',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_players_online',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_protocol_version-bedrock_mock_config_entry-BedrockServer-status_response1]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_protocol_version-java_mock_config_entry-JavaServer-status_response0]
  None
# ---
# name: test_sensor_update[sensor.minecraft_server_version-bedrock_mock_config_entry-BedrockServer-status_response1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Version',
      'icon': 'mdi:numeric',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_version',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Version',
  })
# ---
# name: test_sensor_update[sensor.minecraft_server_version-java_mock_config_entry-JavaServer-status_response0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Minecraft Server Version',
      'icon': 'mdi:numeric',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.minecraft_server_version',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Dummy Version',
  })
# ---
